--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.gradient-text {
+  background: linear-gradient(-45deg, #22d3ee, #60a5fa);
+  background-size: 400% 400%;
+  background-clip: text;
+
+  -webkit-text-fill-color: transparent;
+
+  animation: gradient 3s ease infinite;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
