--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+p,
+label {
+  @apply text-gray-800;
+}
+
 .gradient-text {
   background: linear-gradient(-45deg, #22d3ee, #60a5fa);
   background-size: 400% 400%;
