--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Disable highlighting of elements on Android */
+* {
+  -webkit-tap-highlight-color: transparent;
+}
+
 p,
 label {
   @apply text-gray-800;
